# CleanSweep

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  interactive.rs  main.rs  output.rs  tui.rs
crates/cli/src/tui/: app.rs  components.rs  events.rs  ui.rs
crates/cli/tests/: ai_protocol_tests.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  config.rs  lib.rs  modules.rs  state.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/stow/: Cargo.toml
crates/stow/src/: conflict.rs  lib.rs  operations.rs  tree.rs  types.rs
crates/stow/tests/: integration_tests.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs
docs/: ARCHITECTURE.md
