[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Dreamcoder <dreamcoder08@protonmail.com>"]
license = "MIT"
repository = "https://github.com/dreamcoder08/Dreamcoder_dots"
rust-version = "1.75"

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"

# TUI
ratatui = "0.25"
crossterm = { version = "0.27", features = ["event-stream"] }
tui-big-text = "0.4"

# Templates
handlebars = "5.1"
shellexpand = "3.1"

# Secrets
age = { version = "0.9", features = ["armor", "cli-common"] }

# System
sysinfo = "0.30"
which = "6.0"
dirs = "5.0"
walkdir = "2.4"
filetime = "0.2"
sha2 = "0.10"
hex = "0.4"
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Testing
tempfile = "3.9"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-opt]
inherits = "release"
opt-level = "z"  # Optimize for size
