[package]
name = "dreamcoder-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dreamcoder"
path = "src/main.rs"

[dependencies]
dreamcoder-core = { path = "../core" }
dreamcoder-templates = { path = "../templates" }
dreamcoder-secrets = { path = "../secrets" }
dreamcoder-stow = { path = "../stow" }

clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# TUI
ratatui = "0.25"
crossterm = { version = "0.27", features = ["event-stream"] }
unicode-width = "0.1"
tui-big-text = "0.4"

# Async
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
