[package]
name = "dreamcoder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = { workspace = true }
filetime = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sysinfo = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio-test = "0.4"
