[package]
name = "dreamcoder-secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dreamcoder-core = { path = "../core" }
age = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
