[package]
name = "dreamcoder-stow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dreamcoder-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
