[package]
name = "dreamcoder-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dreamcoder-core = { path = "../core" }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
